# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko2/git-branch-harjoitus/: index.py  readme.md
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/results/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py  counter.py
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko4/verkkokauppa/: .coverage
viikko5/: review.md  vibe.md
viikko5/tennis/: review.md
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: pyproject.toml  run_tests.sh
viikko7/kivi-paperi-sakset-original/src/: kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
viikko7/kivi-paperi-sakset/src/: .coverage  kps_pelaaja_template.py  kps_tehdas.py  web_app.py
viikko7/kivi-paperi-sakset/src/templates/: index.html  play.html
viikko7/kivi-paperi-sakset/src/tests/: README.md  test_kps_tehdas.py  test_tekoaly.py  test_tekoaly_parannettu.py  test_tuomari.py  test_web_app.py
(+7 files in other folders)
